src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
.sb-modal-actions {
  display: flex;
  align-items: center;
  justify-content: center;
}

.sb-modal .ui.modal {
  margin-top: 15% !important;
}

.ngx-datatable.fixed-header .datatable-header {
  padding: 0.625rem;
}

.sidebar-block {
  min-height: 25rem;
}

.ngx-datatable.datatable-header {
  background: var(--mat-accordion-tab-body-active-bg) !important;
}


.custom_mat_dd .mat-select-arrow-wrapper {
  vertical-align: bottom !important;
}

.reset-filter{
  color: var(--primary);
  background-color: var(--brand-header-tail-text);
  width: fit-content;
}

.newData{
  color:var(--ck-color-base-error);
  margin-left: 1.875rem;
  margin-top: 0.625rem;
}

.info{
  justify-self: flex-start;
  margin-right: 0.625rem;
  cursor: pointer;
  color: var(--primary) !important;
}
.goback{
  justify-self: flex-end;
  margin-left: 0.625rem;
  cursor: pointer;
  color: var(--ck-color-button-cancel);
}

.ppFilter{
  margin-top: 1.25rem;
}

.col-gap{
  column-gap:1.875rem;
}

.modalNote{
  line-height: initial;
}

.infoIcon{
  width: 1.125rem;
}
.sb-graph-section{

  box-shadow: 0 calculateRem(2px) calculateRem(7px) 0 rgba(var(--rc-rgba-black), 0.16);
  background: var(--sb-graph-section-bg);
  border: 0.0625rem solid var(--rc-dddddd);

}

.sb-last-update-status {
  font-size: calculateRem(12px);
  font-weight: bold;
}

::ng-deep {

  .customTable{
    sb-dashlets-filters{
      display: none !important;
    }

    .dataTables_length{
      display: flex !important;
      width: 100% !important;
      justify-content: flex-end !important;
    }
    .chart-title{
      font-weight: 700;
    }
    table{
      width: 100% !important;
    }
  }
  .customGraph{
    .sb-filter-g__item{
      border-radius: 1.5rem !important;
    }

    .multiselect-dropdown .dropdown-btn{
      border-radius: 1.5rem !important;
    }
  }
  
  .chart-title {
    font-size: 1rem;
    font-weight: 500;
    margin-bottom: 0.5rem !important;
    padding-top: 0.5rem;
  }

  
  .custom_mat_dd .mat-select-arrow-wrapper {
    vertical-align: bottom !important;
  }

  .custom_mat_dd .mat-form-field-flex {
    padding-top: 0px !important;
  }

  .mat-select-panel .mat-option {
    white-space: normal !important;
    display: inline-table !important;
    width: 100% !important;
    line-height: 1.5em !important;
    padding-top: 0.625rem;
  }
  .mat-option-text{
    display: flex !important;
  }



}

